input e lista dinamica

--- a/test-app/src/app/home/home.page.html
+++ b/test-app/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-button [routerLink]="['/to-do']">To Do List</ion-button>
+  <ion-button (click)="navigate()">To Do List</ion-button>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Blank</ion-title>
