--- a/test-app/src/app/to-do/to-do.page.html
+++ b/test-app/src/app/to-do/to-do.page.html
@@ -19,8 +19,19 @@
 
   </ion-input>
   <ion-list>
-    <ion-item *ngFor="let e of this.list">
-      {{ e }}
+    <ion-item *ngFor="let e of this.service.list">
+      <ion-checkbox
+        (ionChange)="markDone($event)"
+      >
+        {{ e }}
+    </ion-checkbox>
     </ion-item>
+    <ion-button
+        type="reset"
+        (click)="resetList()"
+
+    >
+    reset
+  </ion-button>
   </ion-list>
 </ion-content>
