--- a/test-app/src/app/home/home.page.html
+++ b/test-app/src/app/home/home.page.html
@@ -17,4 +17,9 @@
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
 </div>
+<div>
+    <canvas #testCanvas height="297" width="210">
+
+    </canvas>
+</div>
 </ion-content>
