--- a/test-app/src/app/home/home.page.html
+++ b/test-app/src/app/home/home.page.html
@@ -12,6 +12,7 @@
 <nav>
     <ion-button (click)="vendita()">Inserimento Vendita</ion-button>
     <ion-button (click)="toDo()">To Do List</ion-button>
+    <ion-button (click)="canvas()">Canvas</ion-button>
 </nav>
 <div id="container">
     <strong>Ready to create an app?</strong>
