genera pdf meteo con pagina

--- a/test-app/src/app/meteo/meteo.page.html
+++ b/test-app/src/app/meteo/meteo.page.html
@@ -10,4 +10,5 @@
       <ion-title size="large">meteo</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-button (click)="generaPDF()">Genera PDF</ion-button>
 </ion-content>
